--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property='og:title' content='Foti Ceci Portfolio'/>
+    <meta property='og:image' content='./site-thumbnail.png'/>
+    <meta property='og:description' content='Porfolio Site created with React'/>
+    <meta property='og:url' content='https://www.foticeci.com/'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+    <meta property='og:type' content='website'/>
+    
+
+
+
     <meta charset="utf-8" />
     <link rel="icon" href="./icon.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property='og:image' content='./site-thumbnail.png'/>
     <meta
       name="description"
       content="Foti Ceci portfolio created with React"
