--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="./icon.svg"/>
+    <meta
+      name="description"
+      content="Foti Ceci portfolio created with React"
+    />
+    <title>Foti Ceci</title>
+    <!-- Site thumbnail img-->
     <meta property='og:title' content='Foti Ceci Portfolio'/>
     <meta property='og:image' content='./site-thumbnail.png'/>
     <meta property='og:description' content='Porfolio Site created with React'/>
@@ -8,28 +18,16 @@
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
     <meta property='og:type' content='website'/>
-    
-
-
-
-    <meta charset="utf-8" />
-    <link rel="icon" href="./icon.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta property='og:image' content='./site-thumbnail.png'/>
-    <meta
-      name="description"
-      content="Foti Ceci portfolio created with React"
-    />
-    <title>Foti Ceci</title>
   </head>
+  
   <body>
-
-  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <textarea name="message"></textarea>
-  </form>
+    <!-- Netlify form -->
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
   
     <div id="root"></div>
 
